--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,109 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin:0;
+  padding: 0;
+}
+.container{
+  display:flex;
+  flex-direction: column;
+  align-items:flex-start;
+  background-color: lightblue;
+}
+.start{
+  margin:10px;
+  width:10rem;
+  border: none;
+  border-radius: 10px;
+  padding:15px;
+  align-self:flex-start;
+  font-size: 20px;
+  letter-spacing: 1px;
+  background-color: dodgerblue;
+  color: white;
+  cursor: pointer;
+
+}
+.reset-finish{
+  display: flex;
+  justify-content: space-between;
+  margin:10px;
+  width:calc(50% + 4px);
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.reset-finish>button{
+  padding: 20px;
+  border: none;
+  font-size: 20px;
+  letter-spacing: 1px;
+  border-radius: 10px;
+  width:15rem;
+  cursor: pointer;
+}
+.reset-finish>button:first-child{
+  background-color: coral;
+  color:white;
+}
+.reset-finish>button:last-child{
+  background-color: lightseagreen;
+  color:white;
+}
+.result{
+  margin:10px;
+  width:calc(50% + 4px);
+  text-align: center;
+  background-color: yellow;
+  border-radius: 10px;
+}
+.time{
+  position: fixed;
+  left:calc(50% + 20px);
+  padding:15px;
+  top:10px;
+  background-color: aqua;
+  font-size:20px;
+  border-radius: 10px;
+  color:darkblue;
+}
+.questionContent{
+  border:2px solid black;
+  margin:10px;
+  width:50%;
+  border-radius: 10px;
+}
+.question{
+  margin-left:10px;
+  padding-top:15px;
+  padding-bottom:15px;
+  padding-right: 10px;
+}
+.answers{
+  padding:20px;
+  margin:10px;
+  border:2px solid black;
+  display:block;
+  width:calc(100% - 20px);
+  font-size:20px;
+  color:white;
+  cursor:pointer;
+  border-radius: 10px;
+}
+
+@media screen and (max-width:500px){
+  .questionContent{
+      width:calc(80% - 20px);
+  }
+  .time{
+      position: fixed;
+      left:100%;
+      transform: translate(-100%,0);
+      top:10px;
+  }
+  .result{
+      width:calc(80% - 20px);
+  }
+  .reset-finish{
+      width:calc(80% - 16px);
+      gap:20px;
+  }
 }
